--- a/styles/components/Modal.scss
+++ b/styles/components/Modal.scss
@@ -1,4 +1,4 @@
-
+/*
 .ui-modal {
   position: fixed;
   left: 0px;
@@ -14,6 +14,36 @@
   >.ui-modal-wrapper {
     position: relative;
     padding: 60px 0;
+
+    >.ui-modal-container {
+      margin: 0 auto;
+      background: #fff;
+      border-radius: 6px;
+      overflow: hidden;
+      animation: scale-up 0.3s ease-out;
+    }
+  }
+}
+*/
+
+
+.ui-modal {
+  position: fixed;
+  left: 0px;
+  top: 0px;
+  width: 100%;
+  height: 100%;
+  padding: 60px 0;
+  overflow: auto;
+  background: rgba(0, 0, 0, 0.5);
+  animation: fade-in 0.3s ease-out;
+  user-select: none;
+  z-index: 1100;
+
+  >.ui-modal-wrapper {
+    display: flex;
+    align-items: center;
+    justify-content: center;
 
     >.ui-modal-container {
       margin: 0 auto;
