--- a/styles/components/Modal.scss
+++ b/styles/components/Modal.scss
@@ -33,7 +33,6 @@
   top: 0px;
   width: 100%;
   height: 100%;
-  padding: 60px 0;
   overflow: auto;
   background: rgba(0, 0, 0, 0.5);
   animation: fade-in 0.3s ease-out;
@@ -41,12 +40,13 @@
   z-index: 1100;
 
   >.ui-modal-wrapper {
+    min-height: 100%;
     display: flex;
-    align-items: center;
-    justify-content: center;
+  align-items: center;
+  justify-content: center;
 
     >.ui-modal-container {
-      margin: 0 auto;
+      margin: 60px auto;
       background: #fff;
       border-radius: 6px;
       overflow: hidden;
