--- a/styles/components/Modal.scss
+++ b/styles/components/Modal.scss
@@ -38,12 +38,12 @@
   animation: fade-in 0.3s ease-out;
   user-select: none;
   z-index: 1100;
-
-  >.ui-modal-wrapper {
-    min-height: 100%;
-    display: flex;
+  display: flex;
   align-items: center;
   justify-content: center;
+
+  >.ui-modal-wrapper {
+    margin: auto 0;
 
     >.ui-modal-container {
       margin: 60px auto;
