--- a/styles/components/ModalFooter.scss
+++ b/styles/components/ModalFooter.scss
@@ -2,7 +2,7 @@
 .ui-modal-footer {
   width: 100%;
   height: 50px;
-  border-top: 1px solid #d6d6d6;
+  border-top: 1px solid #e9e9e9;
   box-sizing: content-box;
   /*z-index: 1101;*/
   
@@ -25,6 +25,7 @@
         color: #206fe8;
         font-size: 16px;
         border: none;
+        outline: none;
 
         &:active {
           background-color: #ebebeb;
@@ -43,8 +44,8 @@
         }   
       }
 
-      &:nth-of-type(n+2) {
-        border-left: solid 1px #cfcfd1;
+      &:not(:first-of-type) {
+        border-left: solid 1px #e9e9e9;
       }
 
 
