--- a/styles/components/Toast.scss
+++ b/styles/components/Toast.scss
@@ -4,29 +4,14 @@
   left: 0px;
   top: 0px;
   width: 100%;
-  height: 100%;
   overflow: auto;
-  animation: fade-in 0.3s ease-out;
   user-select: none;
   display: flex;
   align-items: flex-start;
   justify-content: center;
   z-index: 1300;
 
-  > .ui-toast-wrapper {
-    margin: 0 auto;
-    background: rgba(0, 0, 0, 0.6);
-    color: #fff;
-    overflow: hidden;
-    animation: slide-top 0.3s ease-out;
-    z-index: 1301;
-
-    > .ui-toast-container {
-      height: 50px;
-      font-size: 14px;
-      text-align: center;
-      overflow: auto;
-      user-select: auto;
-    }
-  }
+  background: rgba(0, 0, 0, 0.6);
+  color: #fff;
+  animation: slide-down 0.3s ease-out;
 }
