--- a/styles/core/animations/scale.scss
+++ b/styles/core/animations/scale.scss
@@ -1,30 +1,24 @@
 
-@keyframes scale-up {
-  0% {
-    opacity: 0;
-    transform: scale(0.2, 0.2);
+@keyframes scale-enter {
+  from {
+    transform: scale3d(.3, .3, .3);
   }
-  100% {
-    opacity: 1;
-    transform: scale(1, 1);
+  to {
+    transform: scale3d(1, 1, 1);
   }
 }
-
-@keyframes scale-down {
-  0% {
-    opacity: 1;
-    transform: scale(1, 1);
-  }
-  100% {
-    opacity: 0;
-    transform: scale(0.2, 0.2);
-  }
+.scale-enter {
+  animation: scale-enter both cubic-bezier(0.4, 0, 0, 1.5);
 }
 
-.scale-up {
-  animation: scale-up 0.3s ease-out;
+@keyframes scale-leave {
+  from {
+    transform: scale3d(1, 1, 1);
+  }
+  to {
+    transform: scale3d(.3, .3, .3);
+  }
 }
-
-.scale-down {
-  animation: scale-down 0.3s ease-out;
+.scale-leave {
+  animation: scale-leave both;
 }
