--- a/styles/core/animations/slide.scss
+++ b/styles/core/animations/slide.scss
@@ -1,44 +1,36 @@
 
 @keyframes slide-top {
-  0% {
-    opacity: 0;
-    transform: translate(0, -100%);
+  from {
+    transform: translate3d(0, 100px, 0);
   }
-  100% {
-    opacity: 1;
-    transform: translate(0, 0);
+  to {
+    transform: translate3d(0, 0, 0);
   }
 }
 
 @keyframes slide-down {
-  0% {
-    opacity: 0;
-    transform: translate(0, 100%);
+  from {
+    transform: translate3d(0, -100px, 0);
   }
-  100% {
-    opacity: 1;
-    transform: translate(0, 0);
+  to {
+    transform: translate3d(0, 0, 0);
   }
 }
 
 @keyframes slide-left {
-  0% {
-    opacity: 0;
+  from {
     transform: translate(-100%, 0);
   }
-  100% {
-    opacity: 1;
+  to {
     transform: translate(0, 0);
   }
 }
 
 @keyframes slide-right {
-  0% {
-    opacity: 0;
+  from {
     transform: translate(100%, 0);
   }
-  100% {
-    opacity: 1;
+  to {
     transform: translate(0, 0);
   }
 }
