--- a/styles/components/Mask.scss
+++ b/styles/components/Mask.scss
@@ -5,7 +5,7 @@
   top: 0px;
   width: 100%;
   height: 100%;
-  animation: fade-in 0.2s ease-out;
+  animation: fade-enter .3s ease-out;
   background-color: rgba(0, 0, 0, .5);
   z-index: 1000;
 
