--- a/styles/components/Modal.scss
+++ b/styles/components/Modal.scss
@@ -1,46 +1,15 @@
-
-/*
 .ui-modal {
   position: fixed;
-  left: 0px;
-  top: 0px;
+  left: 0;
+  top: 0;
   width: 100%;
   height: 100%;
-  overflow: auto;
-  background: rgba(0, 0, 0, 0.5);
-  animation: fade-in 0.3s ease-out;
-  user-select: none;
-  z-index: 1100;
-
-  >.ui-modal-wrapper {
-    position: relative;
-    padding: 60px 0;
-
-    >.ui-modal-container {
-      margin: 0 auto;
-      background: #fff;
-      border-radius: 6px;
-      overflow: hidden;
-      animation: scale-up 0.3s ease-out;
-    }
-  }
-}
-*/
-
-
-.ui-modal {
-  position: fixed;
-  left: 0px;
-  top: 0px;
-  width: 100%;
-  height: 100%;
-  overflow: auto;
-  background: rgba(0, 0, 0, 0.5);
-  user-select: none;
   display: flex;
   align-items: center;
   justify-content: center;
   -webkit-overflow-scrolling: touch;
+  user-select: none;
+  overflow: auto;
   z-index: 1100;
 
   &.radius {
@@ -55,13 +24,27 @@
     }
   }
 
-  >.ui-modal-wrapper {
-    margin: auto 0;
+  > .ui-modal-mask {
+    position: fixed;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #000;
+    background: rgba(0, 0, 0, 0.5);
+    filter: alpha(opacity=50); 
+  }
 
-    >.ui-modal-container {
+  > .ui-modal-wrapper {
+    width: 100%;
+    margin: auto 0;
+  
+    > .ui-modal-container {
+      position: relative;
       margin: 60px auto;
       background: #fff;
       overflow: hidden;
+      z-index: 1101;
     }
   }
 }
