--- a/styles/core/animations/index.scss
+++ b/styles/core/animations/index.scss
@@ -1,4 +1,6 @@
+@import "door.scss";
 @import "fade.scss";
+@import "flip.scss";
 @import "rotate.scss";
-@import "scale.scss";
 @import "slide.scss";
+@import "zoom.scss";
