--- a/examples/styles/ButtonPage.scss
+++ b/examples/styles/ButtonPage.scss
@@ -1,6 +1,19 @@
 
 .App-container {
   padding: 15px;
-}
 
+  .title {
+  	margin: 50px auto;
+  	text-align: center;
+
+  	> h1 {
+  		margin: 0;
+  		font-size: 40px;
+  	}
+  	> p {
+		margin: 0;
+		color: gray;
+  	}
+  }
+}
 
