--- a/examples/styles/core/base.scss
+++ b/examples/styles/core/base.scss
@@ -1,4 +1,22 @@
 
+@media screen and (min-width: 320px){
+  html {
+    font-size: 14px;
+  }
+}
+
+@media screen and (min-width: 375px){
+  html {
+    font-size: 16px;
+  }
+}
+
+@media screen and (min-width: 640px){
+  html {
+    font-size: 18px;
+  }
+}
+
 * {
   -webkit-box-sizing: border-box;
      -moz-box-sizing: border-box;
@@ -12,13 +30,11 @@
 }
 
 html {
-  font-size: 14px;
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 
 body {
   font-family: "Helvetica Neue", Helvetica, Arial, "Microsoft Yahei", "Hiragino Sans GB", "WenQuanYi Micro Hei", sans-serif;
-  font-size: 14px;
   line-height: 1.42857143;
   color: #383838;
   -webkit-font-smoothing: subpixel-antialiased;
