--- a/styles/core/index.scss
+++ b/styles/core/index.scss
@@ -1,7 +1,7 @@
 @import "_variables";
 @import "_func";
 @import "normalize";
-@import "base";
+/*@import "base";*/
 @import "animations/index";
 
 
