--- a/styles/components/index.scss
+++ b/styles/components/index.scss
@@ -7,5 +7,8 @@
 @import "ModalFooter";
 @import "ModalHeader";
 @import "Swipe";
-@import "Switch";
 @import "Toast";
+@import "Picker";
+@import "Selector";
+@import "Switch";
+
