--- a/examples/styles/pages/Page1.scss
+++ b/examples/styles/pages/Page1.scss
@@ -7,3 +7,12 @@ p.buttons {
     margin-bottom: 10px;
   }
 }
+
+.demo {
+  border: 1px solid #E9E9E9;
+  padding: 50px 20px;
+
+  .ui-form {
+    max-width: 540px;
+  }
+}
