--- a/styles/components/index.scss
+++ b/styles/components/index.scss
@@ -8,4 +8,12 @@
 @import "Swipe";
 @import "Toast";
 @import "Switch";
+@import "Input";
+@import "Icon";
+@import "Form";
+@import "Radio";
+
+
+
+
 
