--- a/styles/core/_variables.scss
+++ b/styles/core/_variables.scss
@@ -41,3 +41,5 @@ $btn-danger-border:   $btn-danger-bg !default;
 
 $modal-radius:        6px !default;
 $modal-round:         20px !default;
+
+$icon-url:            'http://at.alicdn.com/t/font_1454518253_3128793';
