--- a/styles/components/Select.scss
+++ b/styles/components/Select.scss
@@ -45,6 +45,7 @@
       right: 8px;
       margin-top: -8px;
       color: #d9d9d9;
+      transition: transform .2s ease;
     }
   }
 
@@ -67,6 +68,10 @@
       border-color: #57c5f7;
       outline: 0;
       box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075), 0 0 8px rgba(102, 175, 233, .6);
+
+      .ui-select-arrow {
+        transform: rotate(180deg);
+      }
     }
   }
 }
