--- a/styles/components/Button.scss
+++ b/styles/components/Button.scss
@@ -80,7 +80,7 @@
   }
 }
 
-.ui-btn {
+.ui-button {
   display: inline-block;
   margin-bottom: 0;
   @include button-size(28px, 5px 10px 3px 10px, 14px, $radius);
