--- a/examples/styles/pages/Page1.scss
+++ b/examples/styles/pages/Page1.scss
@@ -1,24 +1,15 @@
 
-p.buttons {
-  padding: 15px;
-
-  button {
-    display: block;
-    margin-bottom: 10px;
-  }
-}
-
 .demo {
   border: 1px solid #E9E9E9;
-  padding: 50px 20px;
+  padding: 50px;
 
   .ui-form {
-    max-width: 650px;
+    max-width: 700px;
 
     .ui-form-item {
-      > .ui-button,
-      > .ui-switch,
-      > .ui-select {
+      .ui-button,
+      .ui-switch,
+      .ui-select {
         margin-right: 10px;
       } 
     }
