--- a/styles/components/Button.scss
+++ b/styles/components/Button.scss
@@ -56,7 +56,8 @@
 @mixin button-size($height, $padding, $font-size, $border-radius) {
   padding: $padding;
   font-size: $font-size;
-  line-height: 1.5;
+  height: $height;
+  line-height: $height - 2;
 
   &.radius {
     border-radius: $border-radius;
@@ -83,12 +84,14 @@
 .ui-button {
   display: inline-block;
   margin-bottom: 0;
-  @include button-size(28px, 5px 10px 3px 10px, 14px, $radius);
+  @include button-size($base-height, 0 10px, $base-fontSize, $base-radius);
   font-weight: normal;
   text-align: center;
+  vertical-align: middle;
   white-space: nowrap;
   background-image: none;
   border: 1px solid transparent;
+  border-width: 0;
   cursor: pointer;
   outline: 0;
   -webkit-appearance: none;
@@ -111,41 +114,41 @@
 
   /* Button sizes */
   &.size-xl {
-    @include button-size(40px, 6px 14px 5px 14px, 18px, $radius-xl);
+    @include button-size($base-height-xl, 0 14px, $base-fontSize-xl, $base-radius-xl);
   }
   &.size-lg {
-    @include button-size(32px, 5px 11px 4px 11px, 16px, $radius-lg);
+    @include button-size($base-height-lg, 0 12px, $base-fontSize-lg, $base-radius-lg);
   }
   &.size-sm {
-    @include button-size(24px, 2px 7px, 12px, $radius-sm);
+    @include button-size($base-height-sm, 0 8px, $base-fontSize-sm, $base-radius-sm);
   }
   &.size-xs {
-    @include button-size(20px, 2px 4px 1px 4px, 10px, $radius-xs);
+    @include button-size($base-height-xs, 0 6px, $base-fontSize-xs, $base-radius-xs);
   }
 
   /* Button themes */
   &.theme-default {
-    @include button-theme($btn-default-color, $btn-default-bg, $btn-default-border);
+    @include button-theme($base-btn-default-color, $base-btn-default-bg, $base-btn-default-border);
   }
 
   &.theme-primary {
-    @include button-theme($btn-primary-color, $btn-primary-bg, $btn-primary-border);
+    @include button-theme($base-btn-primary-color, $base-btn-primary-bg, $base-btn-primary-border);
   }
 
   &.theme-info {
-    @include button-theme($btn-info-color, $btn-info-bg, $btn-info-border);
+    @include button-theme($base-btn-info-color, $base-btn-info-bg, $base-btn-info-border);
   }
 
   &.theme-success {
-    @include button-theme($btn-success-color, $btn-success-bg, $btn-success-border);
+    @include button-theme($base-btn-success-color, $base-btn-success-bg, $base-btn-success-border);
   }
 
   &.theme-warning {
-    @include button-theme($btn-warning-color, $btn-warning-bg, $btn-warning-border);
+    @include button-theme($base-btn-warning-color, $base-btn-warning-bg, $base-btn-warning-border);
   }
 
   &.theme-danger {
-    @include button-theme($btn-danger-color, $btn-danger-bg, $btn-danger-border);
+    @include button-theme($base-btn-danger-color, $base-btn-danger-bg, $base-btn-danger-border);
   }
 
 }
