--- a/styles/components/Form.scss
+++ b/styles/components/Form.scss
@@ -2,16 +2,53 @@
 .ui-form {
 
   .ui-form-item {
-    font-size: 12px;
+    font-size: 14px;
     margin-bottom: 24px;
-    color: #666;
+    color: #333;
+    zoom: 1;
 
     > label {
-      color: #666;
+      color: #333;
       text-align: right;
       vertical-align: middle;
-      padding-top: 7px;
-      padding-bottom: 7px;
+      line-height: 32px;
+
+      position: relative;
+      display: block;
+      float: left;
+      flex: 0 0 auto;
+      padding-left: 0;
+      padding-right: 10px;
+    }
+
+    .ui-form-item-control {
+      position: relative;
+      display: block;
+      float: left;
+      flex: 0 0 auto;
+      padding-left: 0;
+      padding-right: 0;
+      line-height: 32px;
+    }
+
+    .ui-form-explain {
+      line-height: 1.5;
+      margin-top: 3px;
+      color: gray;
+    }
+
+    &:before {
+      content: " ";
+      display: table;
+    }
+
+    &:after {
+      content: " ";
+      display: table;
+      clear: both;
+      visibility: hidden;
+      font-size: 0;
+      height: 0;
     }
   }
 
