--- a/styles/components/Icon.scss
+++ b/styles/components/Icon.scss
@@ -1,11 +1,11 @@
 
 @font-face {
   font-family: "dragonicon";
-  src: url('#{$icon-url}.eot');
-  src: url('#{$icon-url}.eot?#iefix') format('embedded-opentype'),
-    url('#{$icon-url}.woff') format('woff'),
-    url('#{$icon-url}.ttf') format('truetype'),
-    url('#{$icon-url}.svg#dragonicon') format('svg');
+  src: url('#{$base-icon-url}.eot');
+  src: url('#{$base-icon-url}.eot?#iefix') format('embedded-opentype'),
+    url('#{$base-icon-url}.woff') format('woff'),
+    url('#{$base-icon-url}.ttf') format('truetype'),
+    url('#{$base-icon-url}.svg#dragonicon') format('svg');
 }
 
 .ui-icon {
