--- a/styles/components/Modal.scss
+++ b/styles/components/Modal.scss
@@ -15,13 +15,13 @@
 
   &.radius {
     .ui-modal-dialog {
-      border-radius: $modal-radius;
+      border-radius: $base-modal-radius;
     }
   }
 
   &.round {
     .ui-modal-dialog {
-      border-radius: $modal-round;
+      border-radius: $base-modal-round;
     }
   }
 
