--- a/styles/components/Form.scss
+++ b/styles/components/Form.scss
@@ -29,6 +29,12 @@
       padding-left: 0;
       padding-right: 0;
       line-height: 32px;
+
+      &.has-error {
+        .ui-form-explain {
+          color: #f50;
+        }
+      }
     }
 
     .ui-form-explain {
