--- a/styles/components/index.scss
+++ b/styles/components/index.scss
@@ -5,6 +5,8 @@
 @import "ModalBody";
 @import "ModalFooter";
 @import "ModalHeader";
+@import "Confirm";
+@import "Alert";
 @import "Swipe";
 @import "Toast";
 @import "Switch";
