--- a/styles/components/Button.scss
+++ b/styles/components/Button.scss
@@ -130,25 +130,17 @@
   &.theme-default {
     @include button-theme($base-btn-default-color, $base-btn-default-bg, $base-btn-default-border);
   }
-
-  &.theme-primary {
-    @include button-theme($base-btn-primary-color, $base-btn-primary-bg, $base-btn-primary-border);
-  }
-
   &.theme-info {
     @include button-theme($base-btn-info-color, $base-btn-info-bg, $base-btn-info-border);
   }
-
   &.theme-success {
     @include button-theme($base-btn-success-color, $base-btn-success-bg, $base-btn-success-border);
   }
-
   &.theme-warning {
     @include button-theme($base-btn-warning-color, $base-btn-warning-bg, $base-btn-warning-border);
   }
-
-  &.theme-danger {
-    @include button-theme($base-btn-danger-color, $base-btn-danger-bg, $base-btn-danger-border);
+  &.theme-error {
+    @include button-theme($base-btn-error-color, $base-btn-error-bg, $base-btn-error-border);
   }
 
 }
