--- a/styles/core/_variables.scss
+++ b/styles/core/_variables.scss
@@ -3,11 +3,11 @@ $browser-default-font-size: 14;
 $browser-default-font-size-px: 14px !default;
 
 $base-theme-default:       #e6e6e6 !default;
-$base-theme-primary:       #0e90d2 !default;
 $base-theme-success:       #5cb85c !default;
 $base-theme-info:          #2db7f5 !default;
 $base-theme-warning:       #f0ad4e !default;
-$base-theme-danger:        #d9534f !default;
+$base-theme-error:         #f50 !default;
+/*$base-theme-error:         #d9534f !default;*/
 
 $base-radius-xl:           6px !default;
 $base-radius-lg:           5px !default;
@@ -31,10 +31,6 @@ $base-btn-default-color:   #444 !default;
 $base-btn-default-bg:      $base-theme-default !default;
 $base-btn-default-border:  $base-btn-default-bg !default;
 
-$base-btn-primary-color:   #fff !default;
-$base-btn-primary-bg:      $base-theme-primary !default;
-$base-btn-primary-border:  $base-btn-primary-bg !default;
-
 $base-btn-info-color:      #fff !default;
 $base-btn-info-bg:         $base-theme-info !default;
 $base-btn-info-border:     $base-btn-info-bg !default;
@@ -47,9 +43,9 @@ $base-btn-warning-color:   #fff !default;
 $base-btn-warning-bg:      $base-theme-warning !default;
 $base-btn-warning-border:  $base-btn-warning-bg !default;
 
-$base-btn-danger-color:    #fff !default;
-$base-btn-danger-bg:       $base-theme-danger !default;
-$base-btn-danger-border:   $base-btn-danger-bg !default;
+$base-btn-error-color:     #fff !default;
+$base-btn-error-bg:        $base-theme-error !default;
+$base-btn-error-border:    $base-btn-error-bg !default;
 
 $base-modal-radius:        6px !default;
 $base-modal-round:         20px !default;
