--- a/examples/styles/pages/Page1.scss
+++ b/examples/styles/pages/Page1.scss
@@ -8,7 +8,9 @@
     .ui-form-item {
       .ui-button,
       .ui-switch,
-      .ui-select {
+      .ui-select,
+      .ui-input,
+      .ui-tag {
         margin-right: 10px;
       } 
     }
