--- a/styles/components/Menu.scss
+++ b/styles/components/Menu.scss
@@ -34,7 +34,7 @@
 
   &:hover,
   .ui-menu-item-active {
-    background-color: #eaf8fe;
+    background: #eaf8fe;
   }
 
   &.ui-menu-item-selected {
