--- a/styles/components/Input.scss
+++ b/styles/components/Input.scss
@@ -18,7 +18,7 @@
   transition: border .2s cubic-bezier(0.645, 0.045, 0.355, 1),
               background .2s cubic-bezier(0.645, 0.045, 0.355, 1),
               box-shadow .2s cubic-bezier(0.645, 0.045, 0.355, 1);
-  box-shadow: inset 0 1px 3px #e3e3e3;
+  /*box-shadow: inset 0 1px 3px #e3e3e3;*/
 
   &:focus {
     border-color: #57c5f7;
