--- a/styles/components/Select.scss
+++ b/styles/components/Select.scss
@@ -27,7 +27,7 @@
     border: 1px solid #d9d9d9;
     transition: all .3s cubic-bezier(.645, .045, .355, 1);
     height: 32px;
-    box-shadow: inset 0 1px 3px #e3e3e3;
+    /*box-shadow: inset 0 1px 3px #e3e3e3;*/
     cursor: pointer;
 
     &:hover {
@@ -47,14 +47,17 @@
       white-space: nowrap;
       padding-left: 10px;
       padding-right: 28px;
-      line-height: 30px;
+
+      &.ui-select-text-placeholder {
+        color: #ccc;
+      }
     }
 
     .ui-select-arrow {
       position: absolute;
       top: 50%;
       right: 10px;
-      margin-top: -8px;
+      margin-top: -7px;
       color: #d9d9d9;
       transition: transform .2s ease;
       line-height: normal;
@@ -85,6 +88,22 @@
 
       .ui-select-arrow {
         transform: rotate(180deg);
+      }
+    }
+  }
+
+  &.ui-select-disabled {
+
+    .ui-select-selection {
+      cursor: not-allowed;
+      background-color: #f3f5f7;
+
+      &:hover {
+        border-color: #d9d9d9;
+      }
+
+      &:active {
+        border-color: #d9d9d9;
       }
     }
   }
