--- a/styles/core/_variables.scss
+++ b/styles/core/_variables.scss
@@ -12,8 +12,8 @@ $base-theme-error:         #f50 !default;
 $base-radius-xl:           6px !default;
 $base-radius-lg:           5px !default;
 $base-radius:              4px !default;
-$base-radius-sm:           3px !default;
-$base-radius-xs:           2px !default;
+$base-radius-sm:           4px !default;
+$base-radius-xs:           4px !default;
 
 $base-height-xl:           40px !default;
 $base-height-lg:           36px !default;
@@ -24,8 +24,11 @@ $base-height-xs:           24px !default;
 $base-fontSize-xl:         16px !default;
 $base-fontSize-lg:         14px !default;
 $base-fontSize:            12px !default;
-$base-fontSize-sm:         11px !default;
-$base-fontSize-xs:         10px !default;
+$base-fontSize-sm:         12px !default;
+$base-fontSize-xs:         12px !default;
+
+
+
 
 $base-btn-default-color:   #444 !default;
 $base-btn-default-bg:      $base-theme-default !default;
@@ -47,30 +50,50 @@ $base-btn-error-color:     #fff !default;
 $base-btn-error-bg:        $base-theme-error !default;
 $base-btn-error-border:    $base-btn-error-bg !default;
 
+
+
+
+$base-tag-default-color:   #444 !default;
+$base-tag-default-bg:      $base-theme-default !default;
+
+$base-tag-info-color:      #fff !default;
+$base-tag-info-bg:         $base-theme-info !default;
+
+$base-tag-success-color:   #fff !default;
+$base-tag-success-bg:      $base-theme-success !default;
+
+$base-tag-warning-color:   #fff !default;
+$base-tag-warning-bg:      $base-theme-warning !default;
+
+$base-tag-error-color:     #fff !default;
+$base-tag-error-bg:        $base-theme-error !default;
+
+
+
 $base-modal-radius:        6px !default;
 $base-modal-round:         20px !default;
 
 $base-icon-url:            'http://at.alicdn.com/t/font_1454518253_3128793';
 
-$screen-xs:                  480px !default;
+$screen-xs:                 480px !default;
 
-$screen-xs-min:              $screen-xs !default;
-$screen-phone:               $screen-xs-min !default;
-$screen-sm:                  768px !default;
-$screen-sm-min:              $screen-sm !default;
-$screen-tablet:              $screen-sm-min !default;
+$screen-xs-min:             $screen-xs !default;
+$screen-phone:              $screen-xs-min !default;
+$screen-sm:                 768px !default;
+$screen-sm-min:             $screen-sm !default;
+$screen-tablet:             $screen-sm-min !default;
 
-$screen-md:                  992px !default;
-$screen-md-min:              $screen-md !default;
-$screen-desktop:             $screen-md-min !default;
+$screen-md:                 992px !default;
+$screen-md-min:             $screen-md !default;
+$screen-desktop:            $screen-md-min !default;
 
-$screen-lg:                  1200px !default;
-$screen-lg-min:              $screen-lg !default;
-$screen-lg-desktop:          $screen-lg-min !default;
+$screen-lg:                 1200px !default;
+$screen-lg-min:             $screen-lg !default;
+$screen-lg-desktop:         $screen-lg-min !default;
 
-$screen-xs-max:              ($screen-sm-min - 1) !default;
-$screen-sm-max:              ($screen-md-min - 1) !default;
-$screen-md-max:              ($screen-lg-min - 1) !default;
+$screen-xs-max:             ($screen-sm-min - 1) !default;
+$screen-sm-max:             ($screen-md-min - 1) !default;
+$screen-md-max:             ($screen-lg-min - 1) !default;
 
 
 $grid-columns:              12 !default;
@@ -78,11 +101,11 @@ $grid-gutter-width:         0px !default;
 $grid-float-breakpoint:     $screen-sm-min !default;
 $grid-float-breakpoint-max: ($grid-float-breakpoint - 1) !default;
 
-$container-tablet:             (750px + $grid-gutter-width) !default;
-$container-sm:                 $container-tablet !default;
+$container-tablet:          (750px + $grid-gutter-width) !default;
+$container-sm:              $container-tablet !default;
 
-$container-desktop:            (970px + $grid-gutter-width) !default;
-$container-md:                 $container-desktop !default;
+$container-desktop:         (970px + $grid-gutter-width) !default;
+$container-md:              $container-desktop !default;
 
-$container-large-desktop:      (1170px + $grid-gutter-width) !default;
-$container-lg:                 $container-large-desktop !default;
+$container-large-desktop:   (1170px + $grid-gutter-width) !default;
+$container-lg:              $container-large-desktop !default;
