--- a/styles/components/Tag.scss
+++ b/styles/components/Tag.scss
@@ -5,32 +5,6 @@
   background-color: $background;
   color: $color;
   
-/*  &:hover {
-    background-color: $active-background;
-               color: $color;
-  }
-
-  &:focus,
-  &.focus {
-    background-color: $active-background;
-               color: $color;
-  }
-
-  &:active,
-  &.active {
-    background-color: $active-background;
-               color: $color;
-    background-image: none;
-    box-shadow: inset 0 3px 5px rgba(0,0,0,.125);
-
-    &:hover,
-    &:focus,
-    &.focus {
-      background-color: darken($background, 17%);
-                 color: $color;
-    }
-  }*/
-  
   &.disabled,
   &:disabled {
     cursor: not-allowed;
@@ -41,6 +15,10 @@
     }
     &:hover {
       background-color: $background;
+    }
+
+    .ui-icon {
+      cursor: not-allowed;
     }
   }
 }
@@ -72,6 +50,14 @@
   transition: all .3s cubic-bezier(.78, .14, .15, .86);
   vertical-align: middle;
   overflow: hidden;
+
+  /* disabled Tag */
+  &.disabled,
+  &:disabled {
+    cursor: not-allowed;
+    opacity: .65;
+    box-shadow: none;
+  }
 
   /* Tag sizes */
   &.size-xl {
