--- a/styles/components/Form.scss
+++ b/styles/components/Form.scss
@@ -61,7 +61,7 @@
   }
 
   .ui-form-item-control {
-    line-height: 32px;
+    line-height: 30px;
 
     /* form-item-control theme */
     &.theme-default {
@@ -77,7 +77,7 @@
 
   .ui-form-explain {
     line-height: 1.5;
-    margin-top: 5px;
+    padding-top: 5px;
     color: gray;
   }
 
