--- a/styles/components/Table.scss
+++ b/styles/components/Table.scss
@@ -3,7 +3,42 @@
   width: 100%;
   max-width: 100%;
   border-collapse: separate;
+  border-spacing: 0;
   text-align: left;
-  border-radius: 6px;
+  border-radius: 4px;
   overflow: hidden;
+  font-size: 12px;
+  color: #666;
+
+  th,
+  td {
+    padding: 3px 10px;
+  }
+
+  th {
+    background: #f9f9f9;
+    font-weight: bold;
+    transition: background .3s ease;
+    position: relative;
+  }
+
+  &.ui-table-bordered {
+    border: 1px solid #e9e9e9;
+
+    th,
+    td {
+      border-right: 1px solid #e9e9e9;
+      border-bottom: 1px solid #e9e9e9;
+    }
+
+    tr:last-child td {
+      border-bottom: 0;
+    }
+
+    th:last-child,
+    td:last-child {
+      border-right: 0;
+    }
+  }
+
 }
